--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Album Dashboard</title>
+    <title>Kiyoraka Music</title>
     <link rel="stylesheet" href="asset/css/style.css">
 </head>
 <body>
     <div class="sidebar">
-        <div class="logo">Music Dashboard</div>
+        <div class="logo">Kiyoraka Music</div>
         <ul class="menu">
             <li><a href="#" class="active" data-target="dashboard-content"><span>Dashboard</span></a></li>
             <li><a href="#" data-target="albums-content"><span>Album List</span></a></li>
@@ -104,7 +104,7 @@
                         <tr>
                             <th>#</th>
                             <th>Title</th>
-                            <th>Style</th>
+                            <!-- <th>Style</th> -->
                             <th>Action</th>
                         </tr>
                     </thead>
