--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="sidebar">
         <div class="logo">Kiyoraka Music</div>
         <ul class="menu">
-            <li><a href="#" class="active" data-target="dashboard-content"><span>Dashboard</span></a></li>
+            <li><a href="#" class="active" data-target="dashboard-content"><span>Main</span></a></li>
             <li><a href="#" data-target="albums-content"><span>Album List</span></a></li>
         </ul>
     </div>
@@ -18,7 +18,7 @@
     <div class="main-content">
         <!-- Dashboard Content -->
         <div id="dashboard-content">
-            <h1 class="glass-card">Dashboard Overview</h1>
+            <h1 class="glass-card">Main</h1>
             
             <div class="stats">
                 <div class="stat-card">
