update album data

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         </div>
     </div>
     
-
+    <script src="asset/js/album-data.js"></script>
     <script src="asset/js/albumLoader.js"></script>
     <script src="asset/js/main.js"></script>
 </body>
