--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiyoraka Music</title>
+    <link rel="icon" type="image/png" href="asset/img/Logo.png">
     <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="asset/css/mobile-view.css">
 </head>
 <body>
+    <button class="hamburger-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
     <div class="sidebar">
-        <div class="logo">Kiyoraka Music</div>
+        <div class="logo">
+            <img src="asset/img/Logo.png" alt="Kiyoraka Music Logo" class="logo-img">
+            Kiyoraka Music
+        </div>
         <ul class="menu">
             <li><a href="#" class="active" data-target="dashboard-content"><span>Main</span></a></li>
             <li><a href="#" data-target="albums-content"><span>Album List</span></a></li>
@@ -58,7 +68,11 @@
             <!-- Add this right after the Album List heading -->
             <div class="search-filter-container glass-card">
                 <div class="search-box">
-                    <input type="text" id="album-search" placeholder="Search albums...">
+                    <input type="text" id="album-search" placeholder="Search...">
+                    <select id="search-type" class="filter-select">
+                        <option value="album">By Album</option>
+                        <option value="song">By Song</option>
+                    </select>
                     <button id="search-btn" class="action-btn">Search</button>
                 </div>
                 <div class="filter-options">
